# ne-fan

./: .gitignore  CLAUDE.md  README.md  localLLM.md  next.md  start.sh
Config/: ai_server_config.json
ai_server/: asset_cache.py  asset_paths.py  controlnet_skin.py  deps.py  dev_api_cache.py  fal_client.py  image_review.py  llm_client.py  main.py  meshy_client.py  model_generator.py  narrative_schemas.py  pipe_server.py  plate_inpainter.py  pyproject.toml  requirements.txt  scene_image_generator.py  scene_segmenter.py  skin_generator.py  sprite_generator.py  sprite_skin_meshy.py  style_pack_builder.py  style_packs.py  test_narrative.py  texture_generator.py
ai_server/routers/: cache_assets.py  diagnostic.py  generation.py  narrative.py  styles.py
ai_server/tests/: test_asset_cache.py  test_contract_fixtures.py  test_dev_api_cache.py  test_sprite_skin_meshy.py  test_style_pack_builder.py  test_style_packs.py
ai_server/tools/: build_style_pack.py
docs/: 3d-ai.md  ai-characters.md  ai-engine.md  ai-graphics-conclusions.md  ai-textures.md  combat.md  efectos.md  ejemplos-conjuros.md  escuelas-de-magia.md  proto-motor-grafico.md  sistema-magia.md
godot/: .gitignore  project.godot
narrative-mcp/: bridge-http-client.ts  eslint.config.js  package-lock.json  package.json  protocol.ts  runtime-config.ts  server.ts  tsconfig.json  validators.ts  ws-bridge.ts
narrative_lab/: README.md  check-scene.ts  fake-ai-server.mjs  game-emulator.mjs  replay-server.mjs
nefan-core/: eslint.config.js  package-lock.json  package.json  tsconfig.json
nefan-html/: index.html  (+4 more)
(+570 files in other folders)
